--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,17 +1,46 @@
 /** Globales **/
 
-.contenedor{
+.contenedor {
     max-width: 1200px;
     margin: 0 auto 0 auto;
+}
+
+body {
+    font-family: 'Lato', sans-serif;
 }
 
 
 /*Header*/
 
-.site-header.inicio{
+.site-header.inicio {
     background: url(../img/header.jpg);
     background-position: center center;
     background-size: cover;
     height: 100vh;
     min-height: 600px;
 }
+
+.barra {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 30px;
+}
+
+.navegacion a {
+    color: #ffffff;
+    text-decoration: none;
+    font-size: 18px;
+    margin-right: 20px;
+}
+
+.navegacion a:hover {
+    color: aqua;
+}
+
+.navegacion a:last-of-type {
+    margin: 0;
+}
+
+
+/* Menu */
