--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,12 +1,51 @@
-/** Globales **/
-
-.contenedor {
-    max-width: 1200px;
-    margin: 0 auto 0 auto;
+html{
+    font-size: 62.5%; /** Reset para REMS - 62.5% = 10px de 16px **/
 }
 
 body {
     font-family: 'Lato', sans-serif;
+    font-size: 1.6rem;
+    line-height: 2;
+}
+
+
+
+/** Globales **/
+
+.contenedor {
+    max-width: 120rem;
+    margin: 0 auto 0 auto;
+}
+
+h1{
+font-size: 3.8rem;
+}
+
+h2{
+    font-size: 3.4rem;
+}
+
+h3{
+    font-size: 3rem;
+}
+
+h4{
+    font-size: 2.6rem;
+}
+
+/** Utilidades **/
+
+.seccion{
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+}
+
+.centrar-texto{ 
+    text-align: center;
+}
+
+.fw-300{
+    font-weight: 300;
 }
 
 
@@ -18,6 +57,20 @@ body {
     background-size: cover;
     height: 100vh;
     min-height: 600px;
+}
+
+.contenido-header{
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.contenido-header h1 {
+    color: #ffffff;
+    padding-bottom: 2rem;
+    max-width: 60rem;
+    line-height: 1.8;
 }
 
 .barra {
@@ -43,4 +96,25 @@ body {
 }
 
 
+
+
 /* Menu */
+
+/** Iconos nosotros **/
+
+
+
+.sobre-nosotros{
+    display: flex;
+    justify-content: space-between; 
+
+}
+
+.icono{
+    flex-basis: calc(33.3% - 1rem);
+    text-align: center;
+}
+
+.icono h3{
+    text-transform: uppercase;
+}
