--- a/css/estilos.css
+++ b/css/estilos.css
@@ -33,6 +33,10 @@ h4{
     font-size: 2.6rem;
 }
 
+img{
+    max-width: 100%;
+}
+
 /** Utilidades **/
 
 .seccion{
@@ -117,4 +121,25 @@ h4{
 
 .icono h3{
     text-transform: uppercase;
+}
+
+/** Anuncios **/
+
+.contenedor-anuncios{
+    display: flex;
+    justify-content: space-between;
+}
+
+.anuncio{
+    flex-basis: calc(33.3% - 1rem);
+    border: 1px solid #B5B5B5;
+    background-color: #F5F5F5;
+}
+
+.contenido-anuncio{
+    padding: 2rem;
+}
+
+.contenido-anuncio h4, .contenido-anuncio p{
+    margin: 0;
 }
